--- a/src/app/components/operacoes/operacoes.component.html
+++ b/src/app/components/operacoes/operacoes.component.html
@@ -26,7 +26,7 @@
                 <label class="form-label small mb-1">Carteira</label>
                 <select formControlName="carteiraId" class="form-select form-select-sm">
                   <option value="">Todas as carteiras</option>
-                  <option *ngFor="let carteira of carteiras" [value]="carteira.id">{{ carteira.nome }}</option>
+                  <option *ngFor="let carteira of carteiras" [value]="carteira.idCarteira">{{ carteira.nome }}</option>
                 </select>
               </div>
 
